schema: Update swagger spec
