# schema/swagger/gateway.yml
@@ -16,23 +16,30 @@ paths:
       tags:
         - access
       operationId: findAll
-#      parameters:
-#        - name: since
-#          in: query
-#          type: integer
-#          format: int64
-#        - name: limit
-#          in: query
-#          type: integer
-#          format: int32
-#          default: 20
+      parameters:
+        - name: itemCountPerPage
+          in: query
+          type: integer
+          format: int64
+          default: 10
+        - name: currentPageOffset
+          in: query
+          type: integer
+          format: int32
+          default: 0
       responses:
         200:
-          description: list of access logs
+          description: access records with pagination info
           schema:
-            type: array
-            items:
-              $ref: "#/definitions/access"
+            type: object
+            properties:
+              rows:
+                type: array
+                items:
+                  $ref: "#/definitions/access"
+              pagination:
+                $ref: "#/definitions/pagination"
+
         default:
           description: generic error response
           schema:
@@ -110,6 +117,22 @@ paths:
           schema:
             $ref: "#/definitions/error"
 definitions:
+  pagination:
+    type: object
+    required:
+      - itemCountPerPage  # limit
+      - currentPageOffset # offset
+      - totalItemCount    # count
+    properties:
+      itemCountPerPage:
+        type: integer
+        format: int64
+      currentPageOffset:
+        type: integer
+        format: int32
+      totalItemCount:
+        type: integer
+        format: int64
   access:
     type: object
     required:
