# service-gateway/pkg/api/model/find_all_o_k_body.go
@@ -6,8 +6,6 @@ package model
 // Editing this file might prove futile when you re-run the swagger generate command
 
 import (
-	"strconv"
-
 	strfmt "github.com/go-openapi/strfmt"
 
 	"github.com/go-openapi/errors"
@@ -16,33 +14,64 @@ import (
 
 // FindAllOKBody find all o k body
 // swagger:model findAllOKBody
-type FindAllOKBody []*Access
+type FindAllOKBody struct {
+
+	// pagination
+	Pagination *Pagination `json:"pagination,omitempty"`
+
+	// rows
+	Rows FindAllOKBodyRows `json:"rows"`
+}
 
 // Validate validates this find all o k body
-func (m FindAllOKBody) Validate(formats strfmt.Registry) error {
+func (m *FindAllOKBody) Validate(formats strfmt.Registry) error {
 	var res []error
 
-	for i := 0; i < len(m); i++ {
-
-		if swag.IsZero(m[i]) { // not required
-			continue
-		}
-
-		if m[i] != nil {
-
-			if err := m[i].Validate(formats); err != nil {
-				if ve, ok := err.(*errors.Validation); ok {
-					return ve.ValidateName(strconv.Itoa(i))
-				}
-				return err
-			}
-
-		}
-
+	if err := m.validatePagination(formats); err != nil {
+		// prop
+		res = append(res, err)
 	}
 
 	if len(res) > 0 {
 		return errors.CompositeValidationError(res...)
 	}
+	return nil
+}
+
+func (m *FindAllOKBody) validatePagination(formats strfmt.Registry) error {
+
+	if swag.IsZero(m.Pagination) { // not required
+		return nil
+	}
+
+	if m.Pagination != nil {
+
+		if err := m.Pagination.Validate(formats); err != nil {
+			if ve, ok := err.(*errors.Validation); ok {
+				return ve.ValidateName("pagination")
+			}
+			return err
+		}
+
+	}
+
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *FindAllOKBody) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *FindAllOKBody) UnmarshalBinary(b []byte) error {
+	var res FindAllOKBody
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
 	return nil
 }
