# service-gateway/pkg/api/rest/operations/access/find_all_parameters.go
@@ -9,14 +9,29 @@ import (
 	"net/http"
 
 	"github.com/go-openapi/errors"
+	"github.com/go-openapi/runtime"
 	"github.com/go-openapi/runtime/middleware"
+	"github.com/go-openapi/swag"
+
+	strfmt "github.com/go-openapi/strfmt"
 )
 
 // NewFindAllParams creates a new FindAllParams object
-// no default values defined in spec.
+// with the default values initialized.
 func NewFindAllParams() FindAllParams {
 
-	return FindAllParams{}
+	var (
+		// initialize parameters with default values
+
+		currentPageOffsetDefault = int32(0)
+		itemCountPerPageDefault  = int64(10)
+	)
+
+	return FindAllParams{
+		CurrentPageOffset: &currentPageOffsetDefault,
+
+		ItemCountPerPage: &itemCountPerPageDefault,
+	}
 }
 
 // FindAllParams contains all the bound params for the find all operation
@@ -27,6 +42,17 @@ type FindAllParams struct {
 
 	// HTTP Request Object
 	HTTPRequest *http.Request `json:"-"`
+
+	/*
+	  In: query
+	  Default: 0
+	*/
+	CurrentPageOffset *int32
+	/*
+	  In: query
+	  Default: 10
+	*/
+	ItemCountPerPage *int64
 }
 
 // BindRequest both binds and validates a request, it assumes that complex things implement a Validatable(strfmt.Registry) error interface
@@ -38,8 +64,64 @@ func (o *FindAllParams) BindRequest(r *http.Request, route *middleware.MatchedRo
 
 	o.HTTPRequest = r
 
+	qs := runtime.Values(r.URL.Query())
+
+	qCurrentPageOffset, qhkCurrentPageOffset, _ := qs.GetOK("currentPageOffset")
+	if err := o.bindCurrentPageOffset(qCurrentPageOffset, qhkCurrentPageOffset, route.Formats); err != nil {
+		res = append(res, err)
+	}
+
+	qItemCountPerPage, qhkItemCountPerPage, _ := qs.GetOK("itemCountPerPage")
+	if err := o.bindItemCountPerPage(qItemCountPerPage, qhkItemCountPerPage, route.Formats); err != nil {
+		res = append(res, err)
+	}
+
 	if len(res) > 0 {
 		return errors.CompositeValidationError(res...)
 	}
+	return nil
+}
+
+func (o *FindAllParams) bindCurrentPageOffset(rawData []string, hasKey bool, formats strfmt.Registry) error {
+	var raw string
+	if len(rawData) > 0 {
+		raw = rawData[len(rawData)-1]
+	}
+
+	// Required: false
+	// AllowEmptyValue: false
+	if raw == "" { // empty values pass all other validations
+		// Default values have been previously initialized by NewFindAllParams()
+		return nil
+	}
+
+	value, err := swag.ConvertInt32(raw)
+	if err != nil {
+		return errors.InvalidType("currentPageOffset", "query", "int32", raw)
+	}
+	o.CurrentPageOffset = &value
+
+	return nil
+}
+
+func (o *FindAllParams) bindItemCountPerPage(rawData []string, hasKey bool, formats strfmt.Registry) error {
+	var raw string
+	if len(rawData) > 0 {
+		raw = rawData[len(rawData)-1]
+	}
+
+	// Required: false
+	// AllowEmptyValue: false
+	if raw == "" { // empty values pass all other validations
+		// Default values have been previously initialized by NewFindAllParams()
+		return nil
+	}
+
+	value, err := swag.ConvertInt64(raw)
+	if err != nil {
+		return errors.InvalidType("itemCountPerPage", "query", "int64", raw)
+	}
+	o.ItemCountPerPage = &value
+
 	return nil
 }
